Google button fixed for small devices. Some other minor fixes for other pages to render better on small screens

--- a/Front_end/src/Components/ReviewsPage/reviews.css
+++ b/Front_end/src/Components/ReviewsPage/reviews.css
@@ -2,7 +2,8 @@
     #left {
         position: fixed;
         top: 10rem;
-        bottom: 5rem;
+        bottom: 0rem;
+        padding-bottom: 5rem;
     }
 }
 
